[gd_scene load_steps=7 format=2]

[ext_resource path="res://Graphics/Fonts/MainFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Graphics/HUD/Buttons/ButtonHover.png" type="Texture" id=2]
[ext_resource path="res://Graphics/HUD/Buttons/ButtonNormal.png" type="Texture" id=3]
[ext_resource path="res://Graphics/HUD/Buttons/ButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://Scripts/MenuOptions.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 19
outline_size = 3
outline_color = Color( 0.172549, 0.172549, 0.172549, 1 )
font_data = ExtResource( 1 )

[node name="MenuOptions" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.2
margin_top = -51.2
margin_right = 155.2
rect_pivot_offset = Vector2( -408.316, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionBox" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="OptionBox"]
margin_right = 256.0
margin_bottom = 128.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="OptionBox"]
margin_left = 260.0
margin_right = 516.0
margin_bottom = 128.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="QuitButton" type="TextureButton" parent="OptionBox"]
margin_left = 520.0
margin_right = 776.0
margin_bottom = 128.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="QuitLabel" type="Label" parent="."]
margin_left = 232.0
margin_top = 14.0
margin_right = 278.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PlayLabel" type="Label" parent="."]
margin_left = 26.0
margin_top = 14.0
margin_right = 70.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="OptionsLabel" type="Label" parent="."]
margin_left = 113.0
margin_top = 14.0
margin_right = 195.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="pressed" from="OptionBox/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="OptionBox/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="OptionBox/QuitButton" to="." method="_on_QuitButton_pressed"]
